@@ -40,6 +40,8 @@ rb-attach-search-results-description=If enabled, clicking a search result will o
 rb-attach-search-results=Open search results in an attached info GUI
 rb-burned-in=Burned in
 rb-burner-machine=Burner machine
+rb-burnt-result=Burnt result
+rb-burnt-result-of=Burnt result of
 rb-captions=Captions
 rb-categories=Categories
 rb-categories-description=Uncheck a category to hide its objects from search and information pages.\n[font=default-semibold]NOTE:[/font] Some objects will be shown regardless of these settings (i.e. recipe ingredients and products).
