@@ -6,6 +6,8 @@ Date: ????
     - Added "burner machine" page
       - Burner machines are machines that consume fuel and aren't a crafter, lab, mining drill, or offshore pump
       - Some of these machines might get their own pages someday if enough relevant information is available for display
+    - Added burnt result, and burnt result of, to the item page
+  Gui:
     - When clicking a search result in the search GUI with the left mouse button, the search GUI will be "stickied" to the search GUI
       - A "detach" button will appear in the titlebar of the sticky window, allowing you to detach it
       - Middle-clicking something will open it in a standalone info GUI
